--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header class="page-header">
       <nav class="page-navigation">
-        <a class="logo-header link" href="./index.html">WebStudio</a>
+        <a class="logo-header link" href="./index.html"><span class="accent">Web</span>Studio</a>
         <ul class="menu list">
           <li class="menu-item">
             <a class="menu-link link current" href="./index.html">Студія</a>
@@ -37,7 +37,7 @@
     </header>
     <main>
       <section class="hero">
-        <h1 class="main title">Ефективні рішення для вашого бізнесу</h1>
+        <h1 class="main-title">Ефективні рішення для вашого бізнесу</h1>
         <button class="modal-open-button" type="button">Замовити послугу</button>
       </section>
       <section class="benefits">
@@ -152,7 +152,9 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="logo-footer link" href="./index.html">WebStudio</a>
+      <a class="logo-footer link" href="./index.html"
+        ><span class="accent-footer">Web</span>Studio</a
+      >
       <address>
         <ul class="contact-list list">
           <li class="contact-list-items">
