--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
   <body>
     <header class="page-header">
       <nav class="page-navigation">
-        <a class="logo-header link" href="./index.html">WebStudio</a>
+        <a class="logo-header link" href="./index.html"><span class="accent">Web</span>Studio</a>
         <ul class="menu list">
           <li class="menu-item">
             <a class="menu-link link" href="./index.html">Студія</a>
@@ -52,114 +52,133 @@
             <button class="filter-buttons" type="button">Маркетинг</button>
           </li>
         </ul>
-      </section>
-      <section class="'projects">
-        <h2 class="visually-hidden">Проекти</h2>
         <ul class="projects-list list">
           <li class="projects-items">
-            <img
-              class="projects-images"
-              src="./images/images-portfolio/picture1.jpg"
-              alt="ноутбук"
-              width="370"
-              height="294"
-            />
-            <h3 class="projects-titles">Технокряк</h3>
-            <p class="projects-type">Веб-сайт</p>
+            <a class="projects-links" href="#">
+              <img
+                class="projects-images"
+                src="./images/images-portfolio/picture1.jpg"
+                alt="ноутбук"
+                width="370"
+                height="294"
+              />
+              <h3 class="projects-titles">Технокряк</h3>
+              <p class="projects-type">Веб-сайт</p></a
+            >
           </li>
           <li class="projects-items">
-            <img
-              class="projects-images"
-              src="./images/images-portfolio/picture2.jpg"
-              alt="баскетболісти"
-              width="370"
-              height="294"
-            />
-            <h3 lang="en" class="projects-titles">Постер New Orlean vs Golden Star</h3>
-            <p class="projects-type">Дизайн</p>
+            <a class="projects-lincs" href="#">
+              <img
+                class="projects-images"
+                src="./images/images-portfolio/picture2.jpg"
+                alt="баскетболісти"
+                width="370"
+                height="294"
+              />
+              <h3 class="projects-titles">
+                Постер<span lang="en">New Orlean vs Golden Star</span>
+              </h3>
+              <p class="projects-type">Дизайн</p></a
+            >
           </li>
           <li class="projects-items">
-            <img
-              class="projects-images"
-              src="./images/images-portfolio/picture3.jpg"
-              alt="логотип"
-              width="370"
-              height="294"
-            />
-            <h3 lang="en" class="projects-titles">Ресторан Seafood</h3>
-            <p class="projects-type">Додаток</p>
+            <a class="projects-lincs" href="#">
+              <img
+                class="projects-images"
+                src="./images/images-portfolio/picture3.jpg"
+                alt="логотип"
+                width="370"
+                height="294"
+              />
+              <h3 class="projects-titles">Ресторан<span lang="en">Seafood</span></h3>
+              <p class="projects-type">Додаток</p></a
+            >
           </li>
           <li class="projects-items">
-            <img
-              class="projects-images"
-              src="./images/images-portfolio/picture4.jpg"
-              alt="навушники"
-              width="370"
-              height="294"
-            />
-            <h3 lang="en" class="projects-titles">Проєкт Prime</h3>
-            <p class="projects-type">маркетинг</p>
+            <a class="projects-lincs" href="#">
+              <img
+                class="projects-images"
+                src="./images/images-portfolio/picture4.jpg"
+                alt="навушники"
+                width="370"
+                height="294"
+              />
+              <h3 class="projects-titles">Проєкт<span lang="en">Prime</span></h3>
+              <p class="projects-type">маркетинг</p></a
+            >
           </li>
           <li class="projects-items">
-            <img
-              class="projects-images"
-              src="./images/images-portfolio/picture5.jpg"
-              alt="коробки"
-              width="370"
-              height="294"
-            />
-            <h3 lang="en" class="projects-titles">Проєкт Boxes</h3>
-            <p class="projects-type">Додаток</p>
+            <a class="projects-lincs" href="#">
+              <img
+                class="projects-images"
+                src="./images/images-portfolio/picture5.jpg"
+                alt="коробки"
+                width="370"
+                height="294"
+              />
+              <h3 class="projects-titles">Проєкт<span lang="en">Boxes</span></h3>
+              <p class="projects-type">Додаток</p></a
+            >
           </li>
           <li class="projects-items">
-            <img
-              class="projects-images"
-              src="./images/images-portfolio/picture6.jpg"
-              alt="монітор"
-              width="370"
-              height="294"
-            />
-            <h3 lang="en" class="projects-titles">Inspiration has no Borders</h3>
-            <p class="projects-type">Веб-сайт</p>
+            <a class="projects-lincs" href="#">
+              <img
+                class="projects-images"
+                src="./images/images-portfolio/picture6.jpg"
+                alt="монітор"
+                width="370"
+                height="294"
+              />
+              <h3 lang="en" class="projects-titles">Inspiration has no Borders</h3>
+              <p class="projects-type">Веб-сайт</p></a
+            >
           </li>
           <li class="projects-items">
-            <img
-              class="projects-images"
-              src="./images/images-portfolio/picture7.jpg"
-              alt="журнал"
-              width="370"
-              height="294"
-            />
-            <h3 lang="en" class="projects-titles">Видання Limited Edition</h3>
-            <p class="projects-type">Дизайн</p>
+            <a class="projects-lincs" href="#">
+              <img
+                class="projects-images"
+                src="./images/images-portfolio/picture7.jpg"
+                alt="журнал"
+                width="370"
+                height="294"
+              />
+              <h3 class="projects-titles">Видання<span lang="en">Limited Edition</span></h3>
+              <p class="projects-type">Дизайн</p></a
+            >
           </li>
           <li class="projects-items">
-            <img
-              class="projects-images"
-              src="./images/images-portfolio/picture8.jpg"
-              alt="бірка"
-              width="370"
-              height="294"
-            />
-            <h3 lang="en" class="projects-titles">Проєкт LAB</h3>
-            <p class="projects-type">Маркетинг</p>
+            <a class="projects-lincs" href="#">
+              <img
+                class="projects-images"
+                src="./images/images-portfolio/picture8.jpg"
+                alt="бірка"
+                width="370"
+                height="294"
+              />
+              <h3 class="projects-titles">Проєкт<span lang="en">LAB</span></h3>
+              <p class="projects-type">Маркетинг</p></a
+            >
           </li>
           <li class="projects-items">
-            <img
-              class="projects-images"
-              src="./images/images-portfolio/picture9.jpg"
-              alt="людина друкує на ноутбуці"
-              width="370"
-              height="294"
-            />
-            <h3 lang="en" class="projects-titles">Growing Business</h3>
-            <p class="projects-type">Додаток</p>
+            <a class="projects-lincs" href="#">
+              <img
+                class="projects-images"
+                src="./images/images-portfolio/picture9.jpg"
+                alt="людина друкує на ноутбуці"
+                width="370"
+                height="294"
+              />
+              <h3 lang="en" class="projects-titles">Growing Business</h3>
+              <p class="projects-type">Додаток</p></a
+            >
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <a class="logo-footer link" href="./index.html">WebStudio</a>
+      <a class="logo-footer link" href="./index.html"
+        ><span class="accent-footer">Web</span>Studio</a
+      >
       <address>
         <ul class="contact-list list">
           <li class="contact-list-items">
