--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
+    />
+    <link <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="page-header">
@@ -62,12 +66,12 @@
                 width="370"
                 height="294"
               />
-              <h3 class="projects-titles">Технокряк</h3>
+              <h2 class="projects-titles">Технокряк</h2>
               <p class="projects-type">Веб-сайт</p></a
             >
           </li>
           <li class="projects-items">
-            <a class="projects-lincs" href="#">
+            <a class="projects-links" href="#">
               <img
                 class="projects-images"
                 src="./images/images-portfolio/picture2.jpg"
@@ -75,14 +79,14 @@
                 width="370"
                 height="294"
               />
-              <h3 class="projects-titles">
+              <h2 class="projects-titles">
                 Постер<span lang="en">New Orlean vs Golden Star</span>
-              </h3>
+              </h2>
               <p class="projects-type">Дизайн</p></a
             >
           </li>
           <li class="projects-items">
-            <a class="projects-lincs" href="#">
+            <a class="projects-links" href="#">
               <img
                 class="projects-images"
                 src="./images/images-portfolio/picture3.jpg"
@@ -90,12 +94,12 @@
                 width="370"
                 height="294"
               />
-              <h3 class="projects-titles">Ресторан<span lang="en">Seafood</span></h3>
+              <h2 class="projects-titles">Ресторан<span lang="en">Seafood</span></h2>
               <p class="projects-type">Додаток</p></a
             >
           </li>
           <li class="projects-items">
-            <a class="projects-lincs" href="#">
+            <a class="projects-links" href="#">
               <img
                 class="projects-images"
                 src="./images/images-portfolio/picture4.jpg"
@@ -103,12 +107,12 @@
                 width="370"
                 height="294"
               />
-              <h3 class="projects-titles">Проєкт<span lang="en">Prime</span></h3>
+              <h2 class="projects-titles">Проєкт<span lang="en">Prime</span></h2>
               <p class="projects-type">маркетинг</p></a
             >
           </li>
           <li class="projects-items">
-            <a class="projects-lincs" href="#">
+            <a class="projects-links" href="#">
               <img
                 class="projects-images"
                 src="./images/images-portfolio/picture5.jpg"
@@ -116,12 +120,12 @@
                 width="370"
                 height="294"
               />
-              <h3 class="projects-titles">Проєкт<span lang="en">Boxes</span></h3>
+              <h2 class="projects-titles">Проєкт<span lang="en">Boxes</span></h2>
               <p class="projects-type">Додаток</p></a
             >
           </li>
           <li class="projects-items">
-            <a class="projects-lincs" href="#">
+            <a class="projects-links" href="#">
               <img
                 class="projects-images"
                 src="./images/images-portfolio/picture6.jpg"
@@ -129,12 +133,12 @@
                 width="370"
                 height="294"
               />
-              <h3 lang="en" class="projects-titles">Inspiration has no Borders</h3>
+              <h2 lang="en" class="projects-titles">Inspiration has no Borders</h2>
               <p class="projects-type">Веб-сайт</p></a
             >
           </li>
           <li class="projects-items">
-            <a class="projects-lincs" href="#">
+            <a class="projects-links" href="#">
               <img
                 class="projects-images"
                 src="./images/images-portfolio/picture7.jpg"
@@ -142,12 +146,12 @@
                 width="370"
                 height="294"
               />
-              <h3 class="projects-titles">Видання<span lang="en">Limited Edition</span></h3>
+              <h2 class="projects-titles">Видання<span lang="en">Limited Edition</span></h2>
               <p class="projects-type">Дизайн</p></a
             >
           </li>
           <li class="projects-items">
-            <a class="projects-lincs" href="#">
+            <a class="projects-links" href="#">
               <img
                 class="projects-images"
                 src="./images/images-portfolio/picture8.jpg"
@@ -155,12 +159,12 @@
                 width="370"
                 height="294"
               />
-              <h3 class="projects-titles">Проєкт<span lang="en">LAB</span></h3>
+              <h2 class="projects-titles">Проєкт<span lang="en">LAB</span></h2>
               <p class="projects-type">Маркетинг</p></a
             >
           </li>
           <li class="projects-items">
-            <a class="projects-lincs" href="#">
+            <a class="projects-links" href="#">
               <img
                 class="projects-images"
                 src="./images/images-portfolio/picture9.jpg"
@@ -168,7 +172,7 @@
                 width="370"
                 height="294"
               />
-              <h3 lang="en" class="projects-titles">Growing Business</h3>
+              <h2 lang="en" class="projects-titles">Growing Business</h2>
               <p class="projects-type">Додаток</p></a
             >
           </li>
